grammars/tree-sitter-cobol/grammar.js
    start: $ => choice(
      repeat($.program_definition),
      $.copybook_definition,
      //optional($.function_definition) //todo
    ),

    comment: $ => /\*>[^\n]*/,

    compiler_directive: $ => token(choice(
      /\$\$?[sS][eE][tT][^\r\n]*/,
      /\][cC][oO][mM][pP][^\r\n]*/,
      /\][sS][aA][vV][eE][^\r\n]*/,
      /[0-9 ]{0,6}[ \t]+[pP][rR][oO][cC][eE][sS][sS][^\r\n]*/,
      /[ \t]+[pP][rR][oO][cC][eE][sS][sS][^\r\n]*/,
      /[pP][rR][oO][cC][eE][sS][sS][ \t]+[^\r\n]*/,
      /[0-9 ]{0,6}[ \t]*[sS][kK][iI][pP][1-3][ \t0-9]*\r?\n/,
      /[ \t]*[eE][jJ][eE][cC][tT]\.?[ \t0-9]*\r?\n/,
    )),

    program_definition: $ => prec.right(4, seq(
      $.identification_division,
      repeat($._inter_division_copy_statement),
      optional($.environment_division),
      repeat($._inter_division_copy_statement),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    _inter_division_copy_statement: $ => seq(
      $.copy_statement,
      $._data_period
    ),

    identification_division: $ => seq(
      $._IDENTIFICATION, $._DIVISION, '.',
      optional(choice(
        $._program_id_paragraph,
        $._program_id_paragraph_without_period
      )),
      repeat($._identification_metadata_section)
    ),

    _program_id_paragraph: $ => seq(
      $._PROGRAM_ID, '.',
      $.program_name,
      optional(choice(
        $.as_literal,
        $.is_initial,
        $.is_common)),
      '.'
    ),

    _program_id_paragraph_without_period: $ => seq(
      $._PROGRAM_ID, '.',
      $.program_name,
      optional(choice(
        $.as_literal,
        $.is_initial,
        $.is_common))
    ),

    _identification_metadata_section: $ => choice(
      $.author_section,
      $.installation_section,
      $.date_written_section,
      $.date_compiled_section,
      $.security_section
    ),

    program_name: $ => choice(
      $.cobol400_word,
      $._WORD,
      $._LITERAL
    ),

    environment_division: $ => seq(
      $._ENVIRONMENT,
      $._DIVISION,
      '.',
      optional($.configuration_section),
      optional($.input_output_section),
    ),

    input_output_section: $ => choice(
      seq(
        $._INPUT_OUTPUT, $._SECTION, '.',
        optional($._file_control_paragraph),
        optional($._i_o_control_paragraph)
      ),
      seq(
        $._INPUT_OUTPUT, $._SECTION, '.',
        repeat1($.select_statement),
        optional($._i_o_control_paragraph)
      ),
      $._file_control_paragraph,
      $._i_o_control_paragraph,
    ),

    _file_control_paragraph: $ => prec.right(seq(
      $._FILE_CONTROL, '.',
      repeat(choice($.misaligned_file_control_comment, $.select_statement))
    )),

    select_statement: $ => seq(
      $._SELECT,
      field('optional', optional($.OPTIONAL)),
      field('file_name', $._file_name),
      repeat($._select_clause),
      repeat(seq('.', repeat1($._select_clause))),
      repeat('.')
    ),

    _i_o_control_paragraph: $ => prec.right(seq(
      $._I_O_CONTROL, '.', optional($.i_o_control),
    )),

    i_o_control: $ => choice(
      seq($.i_o_control_clause, repeat(seq(repeat1('.'), $.i_o_control_clause)), repeat('.')),
      seq($.apply_clause, repeat(seq(repeat1('.'), $.apply_clause)), repeat('.')),
    ),

    i_o_control_clause: $ => choice(
      $.commitment_control_clause,
      $.same_clause,
      $.multiple_file_tape_clause,
      $.i_o_control_header,
    ),

    commitment_control_clause: $ => prec.right(choice(
      prec(2, seq(
        choice($._COMMITMENT_CONTROL, seq($._COMMITMENT, $._CONTROL)),
        $._FOR,
        $.commitment_control_resources
      )),
      seq(
        $._COMMITMENT_CONTROL,
        $.commitment_control_resources
      )
    )),

    commitment_control_resources: $ => prec.right(
      repeat1(field('resources', $.qualified_word))
    ),

    // todo this i_o_control does not exits
    _select_clause: $ => choice(
      $.assign_clause,
      $.access_mode_clause,
      $.alternative_record_key,
      $.collating_sequence_clause,
      $.control_area_clause,
      $.file_status_clause,
      $.lock_mode_clause,
      $.organization_clause,
      $.padding_character_clause,
      $.record_delimiter_clause,
      $.record_key_clause,
      $.relative_key_clause,
      $.reserve_clause,
      $.sharing_clause,
      $.error,
      $.nominal_key_clause,
    ),

    assign_clause: $ => seq(
      $._ASSIGN,
      optional($._TO),
      field('external_or_dynamic', optional($._ext_clause)),
      field('to', choice(
        $.DISK,
        $.PRINTER,
        seq(optional($._device), $._assignment_name),
      ))
    ),

    _ext_clause: $ => choice(
      $.EXTERNAL,
      $.DYNAMIC
    ),

    _device: $ => choice(
      $.DISK,
      $.PRINTER,
    ),

    _assignment_name: $ => choice(
      $._LITERAL,
      $.DISPLAY,
      $.database_assignment_name,
      seq(
        optional($._LITERAL), repeat1($.qualified_word)
      )
    ),

    database_assignment_name: $ => token(prec(2, /[a-zA-Z][a-zA-Z0-9-]*_[a-zA-Z0-9_-]*/)),

    cobol400_word: $ => token(prec(2, /[a-zA-Z0-9][a-zA-Z0-9-]*_[a-zA-Z0-9_-]*/)),

    _file_name: $ => choice($.cobol400_word, $.WORD),

    access_mode_clause: $ => seq(
      $._ACCESS,
      optional($._MODE),
      optional($._IS),
      choice(
        $.SEQUENTIAL,
        $.DYNAMIC,
        $.RANDOM
      )
    ),

    control_area_clause: $ => seq(
      $._CONTROL_AREA,
      optional($._IS),
      field('reference', $.qualified_word)
    ),

    file_status_clause: $ => seq(
      field('file_or_sort', optional($._file_or_sort)),
      $._STATUS,
      optional($._IS),
      field('reference', $.qualified_word),
      field('reference2', optional($.qualified_word)),
    ),

    _file_or_sort: $ => choice(
      $.FILE,
      $.SORT
    ),

    organization_clause: $ => seq(
      optional(seq($._ORGANIZATION, optional($._IS))),
      choice(
        $.INDEXED,
        seq($.RECORD, optional($._BINARY), $.SEQUENTIAL),
        seq($.LINE, $.SEQUENTIAL),
        $.SEQUENTIAL,
        $.RELATIVE,
        $.TRANSACTION,
      )
    ),

    record_key_clause: $ => seq(
      $._RECORD,
      optional($._KEY),
      optional($._IS),
      field('reference', $.qualified_word),
      optional(seq(
        field('key_is_eq', optional(choice(
          seq($.SOURCE, $._IS),
          '='
        ))
        ),
        field('split_key_list', repeat1($.qualified_word))
      ))
    ),

    data_division: $ => prec.right(seq(
      $._DATA, $._DIVISION, '.',
      optional($.file_section),
      optional($.database_section),
      choice(
        seq(
          optional($.working_storage_section),
          optional($.local_storage_section),
          optional($.linkage_section),
          optional($.report_section),
          optional($.screen_section),
        ),
        seq(
          $.linkage_section,
          $.working_storage_section,
          optional($.local_storage_section),
          optional($.report_section),
          optional($.screen_section),
        )
      ),
    )),

	    file_section: $ => prec.right(choice(
	      seq(
	        $._FILE,
	        $._SECTION,
	        '.',
	        repeat(choice(
	          $.file_description,
	          $._file_section_copy_statement
	        ))
	      ),
	      seq(
	        $.file_type,
	        seq(
          $.file_description_entry,
          optional($.record_description_list),
          repeat($.file_description)
        )
	      )
	    )),

    _file_section_copy_statement: $ => seq(
      $.copy_statement,
      $._data_period
    ),

	    file_description: $ => prec.right(seq(
	      $.file_type,
      $.file_description_entry,
      optional($.record_description_list)
    )),

    file_type: $ => choice(
      $.FD,
      $.SD
    ),

    file_description_entry: $ => seq(
      choice($.cobol400_word, $.WORD),
      repeat($.file_description_clause),
      optional('.')
    ),

    record_description_list: $ => prec.right(seq(
      repeat1($._data_division_entry)
    )),

    working_storage_section: $ => prec.right(seq(
      $._WORKING_STORAGE, $._SECTION, '.',
      repeat($._data_division_entry)
    )),

    _data_division_entry: $ => prec.right(choice(
      seq($.copy_statement, repeat1($._data_period)),
      seq($.level_copy_statement, repeat1($._data_period)),
      prec(2, seq(alias($._condition_name_entry, $.data_description), repeat1($._data_period))),
      seq($.data_description, repeat1($.copy_statement), repeat1($._data_period)),
      seq($.data_description, repeat1($._data_period)),
      $.data_description_without_period,
      seq(alias($._exec_sql_include_statement, $.exec_sql_statement), optional(seq($._data_period, optional($._data_period)))),
      seq($.exec_sql_statement, optional($._data_period))
    )),

    data_description: $ => choice(
      $.constant_entry,
      seq(
        $.level_number, $.entry_name,
        repeat($._data_description_clause), optional($._LITERAL)
      ),
      seq(
        $.level_number,
        repeat1($._data_description_clause), optional($._LITERAL)
      ),
      /*seq(
        $.level_number_88, $.entry_name
      ),*/
    ),

    level_number: $ => /[0-9][0-9]?/,
    entry_name: $ => choice(
      $._FILLER,
      $.cobol400_word,
      $._WORD
    ),

    _data_description_clause: $ => choice(
      $.redefines_clause,
      $.external_clause,
      $.global_clause,
      $.picture_clause,
      $.usage_clause,
      $.sign_clause,
      $.occurs_clause,
      $.justified_clause,
      $.synchronized_clause,
      $.blank_clause,
      $.based_clause,
      $.value_clause,
      $.renames_clause,
      $.any_length_clause,
      $.burroughs_lower_bounds_clause,
      $.real_usage_clause,
      $.indicator_clause,
      $.error
    ),

    _identifier: $ => prec.right(choice(
      $.qualified_word,
      seq($.qualified_word, $.subref),
      seq($.qualified_word, $.refmod),
      seq($.qualified_word, $.subref, $.refmod),
    )),

    qualified_word: $ => sepBy(
      choice($.cobol400_word, $.WORD), $._in_of
    ),

    _in_of: $ => choice(
      $._IN,
      $._OF,
      $._ZERO_OF
    ),

    subref: $ => seq(
      '(',
      $._exp_list,
      ')'
    ),

    _exp_list: $ => repeat1($._exp),

    picture_clause: $ => seq(
      choice($._PICTURE, $._PIC),
      optional($._IS),
      $._picture_string,
      optional($.date_format_clause)
    ),

    indicator_clause: $ => seq(
      choice($._INDIC, $._INDICATOR),
      field('indicator', $.integer)
    ),

    //todo
    _picture_string: $ => choice(
      $.picture_x,
      $.picture_n,
      $.picture_9,
      $.picture_a,
      $.picture_edit,
    ),

    picture_9: $ => choice(
      $._fixed_format_picture_9,
      $._picture_9_z,
      $._picture_9_v_1,
      $._picture_9_v_2,
    ),
    _picture_9_z: $ => /[sS]?(9(\([0-9]+\))?)+([zZ](\([0-9]+\))?)+/,
    _picture_9_v_1: $ => /[sS]?([pP9](\([0-9]+\))?)+([vV]([pP9](\([0-9]+\))?)*)?/,
    _picture_9_v_2: $ => /[sS]?[vV]([pP9](\([0-9]+\))?)*/,

    picture_edit: $ => choice(
      $._fixed_format_picture_edit,
      /([aAxX9bBvVzZpPwW\(\)0-9$/,\.*+<>-]|[cC][rR]|[dD][bB])*([aAxX9bBvVzZpPwW\(\)0-9$/,*+<>-]|[cC][rR]|[dD][bB])/
    ),

    value_clause: $ => prec.right(seq(
      choice($._VALUE, $._VALUES),
      optional(choice($._IS, $._ARE)),
      repeat1($.value_item),
      optional($._WHEN),
      optional($._SET),
      optional($._TO),
      optional(seq(
        $._FALSE,
        optional($._IS),
        field('when_set_to_false', $._literal)))
    )),

    value_item: $ => seq(
      choice($._literal, alias($._fixed_format_integer_value, $.integer)),
      optional(seq(
        $.THRU,
        $._literal
      )),
      optional(',')
    ),

    procedure_division: $ => prec.right(3, seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_contenet)
    )),

    _procedure_division_contenet: $ => prec.right(3, choice(
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._procedure_division_statement)
      ),
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat($._procedure_division_statement)
      ),
    )),

    period: $ => '.',

    copy_statement: $ => prec.right(seq(
      $._COPY,
      field('book', choice($.copybook_bib_name, $.cobol400_word, $.WORD, $.string)),
      field('lib_name', optional(seq(
        optional($._in_of),
        choice($.cobol400_word, $.WORD, $.string)))
      ),
      field('supress', optional($.SUPPRESS)),
      optional($.replacing_clause)
    )),

    stop_statement: $ => choice(
      seq(
        $._STOP,
        $._RUN,
        optional(choice(
          field('returning', seq($._RETURNING, $._x)),
          field('giving', seq($._GIVING, $._x))
        ))
      ),
      seq(
        $._STOP,
        field('x', $._simple_value),
      )
    ),

    accept_statement: $ => prec.right(2, seq(
      $._ACCEPT,
      $._accept_body,
    )),

    _accept_body: $ => prec.right(seq(
      $._identifier,
      choice(
        seq(
          optional($.at_line_column),
          optional($.with_accp_attr),
        ),
        seq(
          optional($.with_accp_attr),
          optional($.at_line_column),
        ),
        seq(
          $._FROM,
          field('from', choice(
            seq($.ESCAPE, $.KEY),
            $.LINES,
            $.COLUMNS,
            prec(2, seq($.DATE, $.YYYYMMDD)),
            $.DATE,
            prec(2, seq($.DAY, $.YYYYDDD)),
            $.DAY,
            $.DAY_OF_WEEK,
            $.TIME,
            $.COMMAND_LINE,
            $.ENVIRONMENT_VALUE,
            $.ENVIRONMENT,
            $.ARGUMENT_NUMBER,
            $.ARGUMENT_VALUE,
            $.MNEMONIC_NAME,
            $.WORD
          ))
        )
      )
    )),

    at_line_column: $ => choice(
      seq(optional($._AT), $.line_number, $.column_number),
      seq(optional($._AT), $.column_number, $.line_number),
      seq(optional($._AT), $.column_number),
      seq(optional($._AT), $.line_number),
      seq($._AT, $._simple_value)
    ),

    with_accp_attr: $ => seq(
      $._WITH, repeat1(choice(
        $.BELL,
        $.BLINK,
        $.HIGHLIGHT,
        $.LOWLIGHT,
        $.REVERSE_VIDEO,
        $.UNDERLINE,
        $.OVERLINE,
        seq(choice($.BACKGROUND_COLOR, $.FOREGROUND_COLOR), optional($._IS), $._num_or_id_or_lit),
        seq($.SCROLL, choice($.UP, $.DOWN), optional(seq(
          optional($.BY),
          $._num_or_id_or_lit,
          choice($.LINE, $.LINES)))),
        $.AUTO_SKIP,
        $.AUTO,
        $.FULL,
        $.REQUIRED,
        $.UPDATE,
        $.PROMPT,
        $.SECURE,
        $.SPACE_FILL
      ))
    ),

    compute_statement: $ => choice(
      seq(
        $._COMPUTE,
        field('left', repeat1($.arithmetic_x)),
        choice('=', $._EQUAL),
        field('right', choice($.expr, $.unbalanced_compute_expr)),
      ),
      $.legacy_compute_missing_equal
    ),

    legacy_compute_missing_equal: $ => prec.right(2, seq(
      $._COMPUTE,
      field('left', $.arithmetic_x),
      field('right', choice($.expr, $.unbalanced_compute_expr)),
    )),

    continue_statement: $ => $._CONTINUE,

    display_statement: $ => seq(
      $._DISPLAY,
      $._display_body,
    ),

    _id_or_lit: $ => choice(
      $._identifier,
      $._literal
    ),

    with_clause: $ => choice(
      seq(optional($._WITH), $.NO, $.ADVANCING),
      seq($._WITH, repeat1($.disp_attr))
    ),
